# OwnVault

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  app.h  main.cpp
src/ui/: main_window.cpp  main_window.h
